--- a/css/styles.css
+++ b/css/styles.css
@@ -1,152 +1,377 @@
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
 
 :root {
-    --primary-color: #fc5d66;
-    --secondary-color: #ffc05a;
-    --light-color: #f9fafb;
-    --dark-color: #272d35; 
+  --primary-color: #fc5d66;
+  --secondary-color: #ffc05a;
+  --light-color: #f9fafb;
+  --dark-color: #272d35;
 }
-
-
 
 html,
 body {
-    font-family: 'Open Sans', sans-serif;
-    line-height: 1.6;
-    scroll-behavior: smooth;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.6;
+  scroll-behavior: smooth;
 }
 
 a {
-text-decoration: none;
+  text-decoration: none;
 }
 
 ul {
-    list-style : none;
+  list-style: none;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
-
 .container {
-    max-width: 1200px;
-    margin : 0 auto;
-    padding: 0 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
 }
 
 .container-sm {
-    max-width: 1000px;
-    margin : 0 auto;
-    padding: 0 2rem;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 2rem;
 }
 
+/* Utility classes */
 
+.btn {
+  display: inline-block;
+  padding: 1.2rem 2.2rem;
+  border: 1px solid var(--secondary-color);
+  border-radius: 32px;
+  background: var(--secondary-color);
+  color: var(--dark-color);
+  cursor: pointer;
+  transition: all 0.2s;
+  font-weight: bolder;
+}
+.btn:hover {
+  background: var(--primary-color);
+  color: white;
+  border-color: white;
+}
+
+.section {
+  padding: 4rem 0;
+}
+
+/* section Header   */
+
+.section-header {
+  max-width: 750px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.section-header h2 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  color: #384653;
+  margin-bottom: 0.5rem;
+}
+
+.section-header p {
+  font-size: 1.2rem;
+  color: #7a7a7a;
+}
+
+.heading-border {
+  width: 80px;
+  height: 3px;
+  background: var(--primary-color);
+  margin: 0 auto 2rem;
+}
+
+/* Card */
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 2rem 1.75rem;
+  background-color: #fff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+}
 /* navar */
 
-.navbar {
-    background-color: var(--dark-color);
-    padding: 1rem 0;
-    
-    color: white;
-    padding: 1rem 2rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    transition: background-color 0.3s ease-in-out;
+.navbar.navbar-scroll {
+  background-color: rgba(235, 77, 85, 0.8);
+  backdrop-filter: blur(10px);
 }
 
-.navbar-flex  {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.navbar {
+  background: transparent;
+  padding: 1rem 0;
+
+  color: white;
+  padding: 1rem 2rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.navbar-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .navbar img {
-    width: 81px;
-    height: 32px;
+  width: 81px;
+  height: 32px;
 }
 
-
 .navbar .main-menu-list {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  font-weight: 600;
 }
 
 .navbar a {
-    color: white;
+  color: white;
 }
 
 .navbar a:hover {
-    color: var(--secondary-color);
+  color: var(--secondary-color);
 }
-
 
 /* Mobile menu */
 
 .mobile-menu {
-    display:none;
+  display: none;
 }
-.navbar .mobile-menu-toggle{
-    color: white;
-    cursor: pointer;
+.navbar .mobile-menu-toggle {
+  color: white;
+  cursor: pointer;
 }
 
 .navbar .mobile-menu-items {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    opacity: 0.95;
-    padding: 3rem 2rem;
-    text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
-    transform: translateX(100%);
-    transition: transform 0.3s ease;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0.95;
+  padding: 3rem 2rem;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  transform: translateX(100%);
+  transition: transform 0.3s ease;
 }
-
 
 .navbar .mobile-menu-items.active {
-    transform: translate(0);
+  transform: translate(0);
 }
-
 
 .navbar .mobile-menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-    font-size: 1.2rem;
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  font-size: 1.2rem;
 }
- /* Media queries */
 
- @media screen and (max-width: 1200px) { }
- @media screen and (max-width: 992px) { }
- @media screen and (max-width: 768px) {
+.hero {
+  background: #000 url('../images/header-background.jpg') center center/cover
+    no-repeat;
+  padding: 11.5rem 2rem 8rem;
+  color: white;
+  overflow-x: hidden;
+  position: relative;
+}
 
-    .main-menu-items {
-         display: none;
- 
-    }
-    .navbar .mobile-menu {
-        display: block;
-    }
-    .navbar .mobile-menu-toggle {
-        display: block;
-        padding: 10px;
-    }
+.hero .hero-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 6rem;
+  padding-bottom: 8rem;
+}
+
+.hero h1 {
+  font-size: 3rem;
+  line-height: 1.2;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.hero p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  line-height: 1.8;
+  font-weight: 200;
+}
+
+.hero img {
+  width: 100%;
+  margin-right: -100px;
+}
+
+.hero .frame-decoration {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+}
+
+/* Learn Topics */
+
+.topics {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+
+.topic img {
+  transition: transform 0.3s;
+}
+
+.topic img:hover {
+  transform: scale(1.1);
+}
+
+.topic h3 {
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 0.5rem 0;
+}
+
+/* chapter cards */
+
+.chapter-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  padding: 1rem 0 4rem;
+}
+.chapter-cards img {
+  width: 130px;
+  margin-top: 1rem;
+}
+.chapter-cards h3 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 1rem 0;
+}
+
+/* sumary  */
+
+.summary {
+  background: var(--light-color);
+  color: var(--dark-color);
+  padding: 4rem 2rem 5rem;
+}
+
+.summary .section-lists {
+  background: white;
+  padding: 2rem;
+}
+
+.summary .list-header {
+  background: var(--primary-color);
+  color: white;
+  padding: 0.5rem 1rem;
+  font-weight: 700;
+  font-size: 1.2rem;
+  margin: 1rem 0;
+}
+
+.summary .list-item {
+  padding: 1.4rem 0;
+  border-bottom: 1px solid #f1f4f6;
+}
+
+.summary .list-item:last-child {
+  border-bottom: none;
+}
+/* Media queries */
+
+@media screen and (max-width: 1200px) {
+  .hero .hero-flex {
+    gap: 2rem;
   }
- @media screen and (max-width: 576px) { }
+
+  .hero img {
+    max-width: 500px;
+    margin-right: 0;
+  }
+  .hero h1 {
+    font-size: 3rem;
+  }
+
+  .topics {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 992px) {
+  .hero {
+    text-align: center;
+  }
+
+  .hero .hero-flex {
+    flex-direction: column;
+    padding-bottom: 4rem;
+  }
+  .hero img {
+    max-width: 600px;
+    margin-top: 2rem;
+  }
+  .topics {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .chapter-cards {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 768px) {
+  .main-menu-items {
+    display: none;
+  }
+  .navbar .mobile-menu {
+    display: block;
+  }
+  .navbar .mobile-menu-toggle {
+    display: block;
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .hero {
+    padding-right: 0;
+  }
+  .hero h1 {
+    font-size: 1.8rem;
+  }
+
+  .hero img {
+    max-width: 350px;
+  }
+  .topics {
+    grid-template-columns: 1fr;
+  }
+  .summary .container {
+    padding: 0 ;
+  }
+}
